update aarohi and dashboard

--- a/All SIH/MediSyn+Login/carousel/carousel/index.html
+++ b/All SIH/MediSyn+Login/carousel/carousel/index.html
@@ -323,7 +323,7 @@
           <h4>Improving Hospital Visits
           </h4>
           <p>
-            <strong>Nexus</strong> streamlines maternity care with easy appointment booking, smart scheduling, and instant virtual consultations—<br>ensuring timely support for every mother.
+            <strong>MatraSwasthya</strong> streamlines maternity care with easy appointment booking, smart scheduling, and instant virtual consultations—<br>ensuring timely support for every mother.
           </p>
                         <i class="fa fa-angle-right"></i>
       </div>
@@ -334,7 +334,7 @@
           </div>
           <h4>Authentication & inventory
           </h4>
-          <p>Nexus ensures secure access and real-time inventory management through digital authentication and automated tracking.</p>
+          <p>MatraSwasthya ensures secure access and real-time inventory management through digital authentication and automated tracking.</p>
               <i class="fa fa-angle-right"></i>
       </div>
       <div class="card" data-aos="fade-up" data-aos-duration="1600">
@@ -343,7 +343,7 @@
              <img src="https://i.postimg.cc/NFG43FVq/videocall.png">
           </div>
           <h4>Centralized  & <br> AI Support</h4>
-          <p>Nexus integrates hospital departments and patient records into a single, unified platform for seamless operations.</p>
+          <p>Matraswathya integrates hospital departments and patient records into a single, unified platform for seamless operations.</p>
               <i class="fa fa-angle-right"></i>
       </div>
       </div>
@@ -354,28 +354,40 @@
 
 
 
-
-<div class="container marketing" style="display: flex; justify-content: center; padding: 50px 0;">
-  <div class="row" style="display: flex; gap: 20px; justify-content: center;">
+<div class="container marketing" style="padding: 50px 0;">
+  <div class="row" style="display: flex; justify-content: space-between;">
+    <!-- Aarohi Box -->
     <div class="col-lg-4" style="border: 1px solid #887e7e; padding: 30px; text-align: center; background-color: #f8f9fa;">
       <div>
         <img src="Aarohi.png" alt="Description of image" width="120" height="180" class="bd-placeholder-img rounded-circle">
       </div>
       <h2 class="fw-normal">Aarohi</h2>
       <p><strong>Aarohi</strong> is an advanced machine learning model designed to revolutionize maternal healthcare.</p>
-      <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+      <a class="btn btn-secondary" href="#" style="background-color: #28a745; color: white;">View details &raquo;</a>
     </div>
     
+    <!-- Nexus Box -->
     <div class="col-lg-4" style="border: 1px solid #968d8d; padding: 30px; text-align: center; background-color: #f8f9fa;">
       <div>
-        <img src="nexusimgonly.png" alt="Description of image" width="140" height="140" class="bd-placeholder-img rounded-circle">
+        <img src="baby.jpg" alt="Description of image" width="140" height="140" class="bd-placeholder-img rounded-circle">
       </div>
-      <h2 class="fw-normal">Nexus</h2>
-      <p>Nexus is a patient-centric portal that provides convenient access to healthcare services.</p>
-      <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+      <h2 class="fw-normal">MatraSwasthya</h2>
+      <p>MatraSwasthya is a patient-centric portal that provides convenient access to healthcare services.</p>
+      <a class="btn btn-secondary" href="https://preview--matrsasthya-aarohi-companion.lovable.app/" style ="background-color: #28a745; color: white;">View details &raquo;</a>
     </div>
+
+    <!-- Weight Analyzer Box -->
+    <div class="col-lg-4" style="border: 1px solid #6c757d; padding: 30px; text-align: center; background-color: #f8f9fa;">
+      <div>
+        <img src="weight.jpg" alt="Weight Analyzer" width="140" height="140" class="bd-placeholder-img rounded-circle">
+      </div>
+      <h2 class="fw-normal">Weight Analyzer</h2>
+      <p><strong>Weight Analyzer</strong> helps you track and analyze your weight during pregnancy for better health insights.</p>
+      <a class="btn btn-secondary" href="weight.html" style="background-color: #28a745; color: white;">View details &raquo;</a>
+    </p>    </div>
   </div>
 </div>
+
 >
     
       <!-- <div class="col-lg-4" style="border: 1px solid #ccc; padding: 50px;">
@@ -397,7 +409,7 @@
     <div class="popup-body about-container1">
         <div class="img-frame">
           <img
-            src="https://c4.wallpaperflare.com/wallpaper/848/11/754/baymax-baymax-big-hero-6-minimalism-wallpaper-preview.jpg"
+            src="Aarohi.png"
             alt="baymax" />
         </div>
         <div class="hero-content">
@@ -423,18 +435,18 @@
     <div class="popup-body about-container1">
         <div class="img-frame">
           <img
-            src="logonexus.png"
+            src="baby.jpg"
             alt="baymax" />
         </div>
         <div class="hero-content">
-          <h1>Introducing<br> Nexus</h1>
+          <h1>Introducing<br> MatraSwasthya</h1>
           <p>
-            Nexus is a patient-centric portal that provides convenient access to healthcare services. It allows patients to book appointments, manage medications, view medical records, and communicate with healthcare providers. Nexus empowers patients to take control of their health journey and improve their overall healthcare experience.
+            MatraSwasthya is a patient-centric portal that provides convenient access to healthcare services. It allows patients to book appointments, manage medications, view medical records, and communicate with healthcare providers. MatraSwasthya empowers patients to take control of their health journey and improve their overall healthcare experience.
 
           </p>
           <form id="form" action="http://localhost:3000" autocomplete="off">
             <button type="submit" class="btn1" aria-label="submit">
-              <span>Try Nexus </span>
+              <span>Try MatraSwasthya </span>
               <ion-icon name="arrow-forward-outline"></ion-icon>
             </button>
           </form>
