--- a/All SIH/SIH-frontend-main/SIH-frontend-main/profile.html
+++ b/All SIH/SIH-frontend-main/SIH-frontend-main/profile.html
@@ -1,145 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maternity Profile</title>
-    <link rel="stylesheet" href="profile.css"> <!-- Link to CSS stylesheet -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Maternity & Baby Health Profile</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: #fdf6f0;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    .profile-container {
+      background: white;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      margin-top: 20px;
+    }
+    h2 {
+      color: #cc3366;
+      margin-bottom: 20px;
+    }
+    .btn-custom {
+      background-color: #cc3366;
+      color: white;
+    }
+    .btn-custom:hover {
+      background-color: #b32d59;
+    }
+  </style>
 </head>
 <body>
-
-    <!-- Header Section
-    <header>
-        <div class="container header-container">
-            <div class="logo">
-                <img src="nexus croped.png" alt="MedExpress Logo" height="100px">
-            </div>
-            <nav class="header-nav">
-                <ul>
-                    <li><a href="combine.html">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Feedback</a></li>
-                    <li><a href="profile.html" class="active">Maternity Profile</a></li>
-                </ul>
-            </nav>
+  <div class="container mt-5">
+    <div class="profile-container">
+      <h2>Maternity & Baby Health Profile</h2>
+      <form id="profileForm">
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <label for="motherName" class="form-label">Mother's Name</label>
+            <input type="text" class="form-control" id="motherName" required>
+          </div>
+          <div class="col-md-6 mb-3">
+            <label for="babyName" class="form-label">Baby's Name</label>
+            <input type="text" class="form-control" id="babyName">
+          </div>
         </div>
-    </header> -->
-
-    <!-- Profile Form Section -->
-    <main>
-        <div class="container">
-            <h2>Maternity Tracker</h2>
-            <form id="profile-form">
-                <div class="form-group">
-                    <label for="fullName">Full Name:</label>
-                    <input type="text" id="fullName" name="fullName" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="age">Age:</label>
-                    <input type="number" id="age" name="age" required min="0">
-                </div>
-
-                <div class="form-group">
-                    <label for="lmp">Last Menstrual Period (LMP):</label>
-                    <input type="date" id="lmp" name="lmp" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="gestationalAge">Gestational Age (weeks):</label>
-                    <input type="number" id="gestationalAge" name="gestationalAge" required min="0" max="42">
-                </div>
-
-                <div class="form-group">
-                    <label for="dueDate">Estimated Due Date:</label>
-                    <input type="date" id="dueDate" name="dueDate" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="trimester">Trimester:</label>
-                    <select id="trimester" name="trimester" required>
-                        <option value="">Select Trimester</option>
-                        <option value="First">First (0-13 weeks)</option>
-                        <option value="Second">Second (14-26 weeks)</option>
-                        <option value="Third">Third (27-40 weeks)</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label for="prenatalVisits">Number of Prenatal Visits:</label>
-                    <input type="number" id="prenatalVisits" name="prenatalVisits" min="0">
-                </div>
-
-                <div class="form-group">
-                    <label for="pregnancySymptoms">Current Symptoms:</label>
-                    <textarea id="pregnancySymptoms" name="pregnancySymptoms" rows="3" placeholder="e.g., nausea, swelling, fatigue..."></textarea>
-                </div>
-
-                <div class="form-group">
-                    <label for="medications">Prescribed Supplements / Medications:</label>
-                    <textarea id="medications" name="medications" rows="3" placeholder="e.g., Folic acid, Iron tablets, etc."></textarea>
-                </div>
-
-                <div class="form-group">
-                    <label for="bp">Blood Pressure (mmHg):</label>
-                    <input type="text" id="bp" name="bp" placeholder="e.g., 120/80">
-                </div>
-
-                <div class="form-group">
-                    <label for="bloodSugar">Blood Sugar Level (mg/dL):</label>
-                    <input type="number" id="bloodSugar" name="bloodSugar">
-                </div>
-
-                <div class="form-group">
-                    <label for="weightGain">Weight Gain (kg):</label>
-                    <input type="number" id="weightGain" name="weightGain" step="0.1">
-                </div>
-
-                <div class="form-group">
-                    <label for="babyMovements">Baby Movements Observed:</label>
-                    <textarea id="babyMovements" name="babyMovements" rows="3" placeholder="Kick counts or movement pattern observed..."></textarea>
-                </div>
-
-                <div class="form-group">
-                    <label for="foodCravings">Food Cravings / Aversions:</label>
-                    <textarea id="foodCravings" name="foodCravings" rows="3" placeholder="e.g., craving spicy foods, aversion to dairy..."></textarea>
-                </div>
-
-                <div class="form-group">
-                    <label for="complications">Any Complications?</label>
-                    <textarea id="complications" name="complications" rows="3" placeholder="e.g., gestational diabetes, preeclampsia..."></textarea>
-                </div>
-
-                <div class="form-group">
-                    <label for="emergencyContact">Emergency Contact:</label>
-                    <input type="text" id="emergencyContact" name="emergencyContact" placeholder="Name and Phone Number">
-                </div>
-
-                <button type="submit">Submit</button>
-            </form>
+        <div class="row">
+          <div class="col-md-4 mb-3">
+            <label for="motherWeight" class="form-label">Mother's Weight (kg)</label>
+            <input type="number" class="form-control" id="motherWeight">
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="motherBlood" class="form-label">Mother's Blood Group</label>
+            <input type="text" class="form-control" id="motherBlood">
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="babyBlood" class="form-label">Baby's Blood Group</label>
+            <input type="text" class="form-control" id="babyBlood">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 mb-3">
+            <label for="babyWeight" class="form-label">Baby's Weight (kg)</label>
+            <input type="number" class="form-control" id="babyWeight">
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="babyGender" class="form-label">Baby's Gender</label>
+            <select class="form-select" id="babyGender">
+              <option value="">Select</option>
+              <option>Male</option>
+              <option>Female</option>
+              <option>Other</option>
+            </select>
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="deliveryType" class="form-label">Delivery Type</label>
+            <select class="form-select" id="deliveryType">
+              <option value="">Select</option>
+              <option>Normal</option>
+              <option>Cesarean</option>
+              <option>Assisted</option>
+            </select>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="dob" class="form-label">Baby's Date of Birth</label>
+          <input type="date" class="form-control" id="dob">
+        </div>
+        <div class="mb-3">
+          <label for="feedingType" class="form-label">Feeding Type</label>
+          <select class="form-select" id="feedingType">
+            <option value="">Select</option>
+            <option>Breastfeeding</option>
+            <option>Formula</option>
+            <option>Mixed</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="pregnancyIssues" class="form-label">Pregnancy Issues (if any)</label>
+          <textarea class="form-control" id="pregnancyIssues" rows="3"></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="medicalHistory" class="form-label">Medical History</label>
+          <textarea class="form-control" id="medicalHistory" rows="3"></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="vaccinationStatus" class="form-label">Baby's Vaccination Status</label>
+          <textarea class="form-control" id="vaccinationStatus" rows="3"></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="additionalInfo" class="form-label">Additional Notes</label>
+          <textarea class="form-control" id="additionalInfo" rows="2"></textarea>
         </div>
 
-        <!-- Profile Summary Section -->
-        <div class="container" id="summary-container" style="display: none;">
-            <h2>Maternity Profile Summary</h2>
-            <div id="profile-summary"></div>
-            <button id="download-btn">Download Summary</button>
-            <button id="print-btn">Print Summary</button>
-            <button id="edit-btn">Edit Information</button>
+        <div class="d-flex justify-content-between">
+          <button type="button" class="btn btn-custom" onclick="generateSummary()">Generate Summary</button>
+          <button type="button" class="btn btn-success" onclick="downloadPDF()">Download PDF</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
         </div>
-    </main>
+      </form>
 
-    <!-- Footer Section
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 NEXUS. All rights reserved.</p>
-        </div>
-    </footer>
+      <div class="mt-4" id="summary"></div>
+    </div>
+  </div>
 
-    JavaScript -->
-    <!-- <script src="profile.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script>
+    function generateSummary() {
+      const summaryText = `
+        <h4>Profile Summary:</h4>
+        <ul>
+          <li><strong>Mother's Name:</strong> ${document.getElementById('motherName').value}</li>
+          <li><strong>Mother's Weight:</strong> ${document.getElementById('motherWeight').value} kg</li>
+          <li><strong>Mother's Blood Group:</strong> ${document.getElementById('motherBlood').value}</li>
+          <li><strong>Baby's Name:</strong> ${document.getElementById('babyName').value}</li>
+          <li><strong>Baby's DOB:</strong> ${document.getElementById('dob').value}</li>
+          <li><strong>Baby's Weight:</strong> ${document.getElementById('babyWeight').value} kg</li>
+          <li><strong>Baby's Blood Group:</strong> ${document.getElementById('babyBlood').value}</li>
+          <li><strong>Gender:</strong> ${document.getElementById('babyGender').value}</li>
+          <li><strong>Delivery Type:</strong> ${document.getElementById('deliveryType').value}</li>
+          <li><strong>Feeding Type:</strong> ${document.getElementById('feedingType').value}</li>
+          <li><strong>Pregnancy Issues:</strong> ${document.getElementById('pregnancyIssues').value}</li>
+          <li><strong>Medical History:</strong> ${document.getElementById('medicalHistory').value}</li>
+          <li><strong>Vaccination Status:</strong> ${document.getElementById('vaccinationStatus').value}</li>
+          <li><strong>Additional Info:</strong> ${document.getElementById('additionalInfo').value}</li>
+        </ul>`;
+      document.getElementById('summary').innerHTML = summaryText;
+    }
 
+    async function downloadPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+      let y = 10;
+      const fields = [
+        ['Mother\'s Name', 'motherName'],
+        ['Mother\'s Weight', 'motherWeight'],
+        ['Mother\'s Blood Group', 'motherBlood'],
+        ['Baby\'s Name', 'babyName'],
+        ['DOB', 'dob'],
+        ['Baby\'s Weight', 'babyWeight'],
+        ['Baby\'s Blood Group', 'babyBlood'],
+        ['Baby Gender', 'babyGender'],
+        ['Delivery Type', 'deliveryType'],
+        ['Feeding Type', 'feedingType'],
+        ['Pregnancy Issues', 'pregnancyIssues'],
+        ['Medical History', 'medicalHistory'],
+        ['Vaccination Status', 'vaccinationStatus'],
+        ['Additional Info', 'additionalInfo']
+      ];
+      fields.forEach(([label, id]) => {
+        const value = document.getElementById(id).value;
+        doc.text(`${label}: ${value}`, 10, y);
+        y += 10;
+        if (y > 270) {
+          doc.addPage();
+          y = 10;
+        }
+      });
+      doc.save('Maternity_Baby_Health_Profile.pdf');
+    }
+  </script>
 </body>
 </html>
